--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,11 +10,18 @@ license = "MIT"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-derive_more = "0.99"
 env_logger = "0.8"
 log = "0.4"
 structopt = "0.3"
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
+derive_more = "0.99"
 derive-new = "0.5"
-reqwest = "0.11"
+enum-utils = "0.1"
+serde = { version = "1.0", features = ["derive"] }
+serde_with = "1.9"
+serde_json = "1.0"
+csv = "1.1"
+regex = "1.5"
+directories = "3.0"
+memmap = "0.7"
+flate2 = "1.0"
+reqwest = { version = "0.11", features = ["blocking"] }
