--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,14 @@ license = "MIT"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+name = "tvrank"
+path = "src/lib.rs"
+
+[[bin]]
+name = "tvrank"
+path = "src/main.rs"
+
 [dependencies]
 env_logger = "0.8"
 log = "0.4"
