--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,10 @@ fnv = "1.0"
 num_cpus = "1.13"
 crossbeam = "0.8"
 parking_lot = "0.11"
+humantime = "2.1"
+size = "0.1"
+prettytable-rs = "0.8"
+titlecase = "1.1"
 
 [profile.release]
 debug = true
