--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,7 @@ humantime = "2.1"
 prettytable-rs = "0.8"
 titlecase = "1.1"
 indicatif = "0.16"
+walkdir = "2.3"
 
 [profile.release]
 debug = true
