--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,6 +46,7 @@ prettytable-rs = "0.8"
 titlecase = "1.1"
 indicatif = "0.16"
 walkdir = "2.3"
+tempfile = "3.2"
 
 [profile.release]
 debug = true
