Refactor storage of Imdb database
- Also shifts UI-related stuff to main
- Formatting updates
- The API has changed slightly due to this and it's reflected

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,15 +25,15 @@ env_logger = "0.8"
 log = "0.4"
 structopt = "0.3"
 derive_more = "0.99"
-derive-new = "0.5"
+# derive-new = "0.5"
 enum-utils = "0.1"
 serde = { version = "1.0", features = ["derive"] }
-serde_with = "1.9"
-serde_json = "1.0"
+# serde_with = "1.9"
+# serde_json = "1.0"
 csv = "1.1"
 regex = "1.5"
 directories = "3.0"
-memmap = "0.7"
+# memmap = "0.7"
 flate2 = "1.0"
 reqwest = { version = "0.11", features = ["blocking"] }
 atoi = "0.4"
@@ -43,11 +43,12 @@ crossbeam = "0.8"
 parking_lot = "0.11"
 humantime = "2.1"
 prettytable-rs = "0.8"
-titlecase = "1.1"
+# titlecase = "1.1"
 indicatif = "0.16"
 walkdir = "2.3"
 tempfile = "3.2"
 deepsize = "0.2"
+# bitvec = "0.22.3"
 
 [profile.release]
 debug = true
