--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,12 +18,12 @@ jobs:
     strategy:
       matrix:
         os:
-          - ubuntu-latest
           - ubuntu-18.04
-          - windows-latest
+          - ubuntu-20.04
           - windows-2019
-          - macos-latest
+          - windows-2022
           - macos-10.15
+          - macos-11
         toolchain: [stable]
     steps:
       - uses: actions/checkout@v2
