--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -92,8 +92,8 @@ jobs:
           path: tvrank-${{steps.tag.outputs.tag}}-linux.tar.bz2
 
   macos-build:
-    name: Release build on MacOS
-    runs-on: macos-latest
+    name: Release build on MacOS 11
+    runs-on: macos-11
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -176,8 +176,8 @@ jobs:
           path: tvrank-${{steps.tag.outputs.tag}}-macos.dmg
 
   windows-build:
-    name: Release build on Windows
-    runs-on: windows-latest
+    name: Release build on Windows 2019
+    runs-on: windows-2019
     steps:
       - name: Checkout
         uses: actions/checkout@v2
