--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,7 +35,7 @@ regex = "1.5"
 directories = "3.0"
 # memmap = "0.7"
 flate2 = { version = "1.0", features = ["zlib-ng-compat"], default-features = false }
-reqwest = { version = "0.11", features = ["blocking"] }
+reqwest = { version = "0.11" }
 atoi = "0.4"
 fnv = "1.0"
 # num_cpus = "1.13"
@@ -50,6 +50,7 @@ tempfile = "3.2"
 deepsize = "0.2"
 # bitvec = "0.22.3"
 rayon = "1.5"
+tokio = { version = "1.14.0", features = ["rt-multi-thread", "macros"] }
 
 [profile.release]
 debug = true
