--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,6 +51,7 @@ deepsize = "0.2"
 # bitvec = "0.22.3"
 rayon = "1.5"
 tokio = { version = "1.14.0", features = ["rt-multi-thread", "macros"] }
+aho-corasick = "0.7.18"
 
 [profile.release]
 debug = true
