--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,6 +53,7 @@ rayon = "1.5"
 tokio = { version = "1.14", features = ["rt-multi-thread", "macros"] }
 aho-corasick = "0.7"
 nohash = "0.2"
+deunicode = "1.3"
 
 [profile.release]
 debug = true
