--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,6 +52,7 @@ deepsize = "0.2"
 rayon = "1.5"
 tokio = { version = "1.14.0", features = ["rt-multi-thread", "macros"] }
 aho-corasick = "0.7.18"
+nohash = "0.2"
 
 [profile.release]
 debug = true
