--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,7 +35,7 @@ regex = "1.5"
 directories = "3.0"
 # memmap = "0.7"
 flate2 = "1.0"
-reqwest = { version = "0.11" }
+reqwest = { version = "0.11", features = ["blocking"] }
 atoi = "0.4"
 fnv = "1.0"
 # num_cpus = "1.13"
@@ -50,7 +50,7 @@ tempfile = "3.2"
 # deepsize = "0.2"
 # bitvec = "0.22"
 rayon = "1.5"
-tokio = { version = "1.14", features = ["rt-multi-thread", "macros"] }
+# tokio = { version = "1.14", features = ["rt-multi-thread", "macros"] }
 aho-corasick = "0.7"
 deunicode = "1.3"
 indoc = "1.0"
