--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,7 +38,7 @@ flate2 = "1.0"
 reqwest = { version = "0.11", features = ["blocking"] }
 atoi = "0.4"
 fnv = "1.0"
-# num_cpus = "1.13"
+num_cpus = "1.13"
 # crossbeam = "0.8"
 parking_lot = "0.11"
 humantime = "2.1"
