--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,5 +1,5 @@
 ---
-name: Release
+name: Production Builds
 
 on:
   push:
@@ -8,84 +8,65 @@ on:
 
 jobs:
   linux-build:
-    name: Release build on Linux
+    name: Linux Build
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Get tag name
+      - name: Switch to Git Tag
         uses: dawidd6/action-get-tag@v1
         id: tag
-      - name: Install stable toolchain
+      - name: Install Stable Toolchain
         uses: actions-rs/toolchain@v1
         with:
           profile: minimal
           toolchain: stable
           override: true
           components: rustfmt, clippy
-      - name: Lint
-        uses: actions-rs/cargo@v1
-        with:
-          command: clippy
-          args: --all-targets --all-features
-      - name: Formatting check
+
+      - name: Code Formatting
         uses: actions-rs/cargo@v1
         with:
           command: fmt
           args: --all -- --check -l
-      - name: Documentation build
+
+      - name: Lint
+        uses: actions-rs/cargo@v1
+        with:
+          command: clippy
+          args: --all-targets --all-features --profile production
+
+      - name: Documentation
         uses: actions-rs/cargo@v1
         env:
           RUSTDOCFLAGS: -Dwarnings
         with:
           command: doc
-          args: --all-features --no-deps --document-private-items
-      - name: Debug check
-        uses: actions-rs/cargo@v1
-        with:
-          command: check
-          args: --all-targets --all-features
-      - name: Debug build
-        uses: actions-rs/cargo@v1
-        with:
-          command: build
-          args: --all-features
-      - name: Tests with debug build
-        uses: actions-rs/cargo@v1
-        with:
-          command: test
-          args: --all-features
-      - name: Release check
-        uses: actions-rs/cargo@v1
-        with:
-          command: check
-          args: --all-targets --all-features --release
-      - name: Release build
+          args: >-
+            --all-features
+            --no-deps
+            --document-private-items
+            --profile production
+
+      - name: Build
         uses: actions-rs/cargo@v1
         with:
           command: build
-          args: --all-features --release
-      - name: Tests with release build
+          args: --all-features --profile production
+
+      - name: Tests
         uses: actions-rs/cargo@v1
         with:
           command: test
-          args: --all-features --release
+          args: --all-features --profile production
+
       # - name: Strip + UPX release binary
       #   uses: svenstaro/upx-action@v2
       #   with:
-      #     file: target/release/tvrank
+      #     file: target/production/tvrank
       #     strip: true
-      - name: Production build
-        uses: actions-rs/cargo@v1
-        with:
-          command: build
-          args: --all-features --profile production
-      - name: Tests with production build
-        uses: actions-rs/cargo@v1
-        with:
-          command: test
-          args: --all-features --profile production
-      - name: Build tarball
+
+      - name: Tarball
         shell: bash
         run: |
           export NAME=tvrank-${{steps.tag.outputs.tag}}-linux
@@ -96,91 +77,73 @@ jobs:
           cp LICENSE $NAME/LICENSE
           cp README.md $NAME/README.md
           tar -c -f $NAME.tar.bz2 $NAME
-      - name: Upload tarball artifact
+
+      - name: Upload Tarball
         uses: actions/upload-artifact@v2
         with:
           name: tvrank-${{steps.tag.outputs.tag}}-linux.tar.bz2
           path: tvrank-${{steps.tag.outputs.tag}}-linux.tar.bz2
 
   macos-build:
-    name: Release build on MacOS 11
+    name: MacOS Build
     runs-on: macos-11
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Get tag name
+      - name: Switch to Git Tag
         uses: dawidd6/action-get-tag@v1
         id: tag
-      - name: Install stable toolchain
+      - name: Install Stable Toolchain
         uses: actions-rs/toolchain@v1
         with:
           profile: minimal
           toolchain: stable
           override: true
           components: rustfmt, clippy
-      - name: Lint
-        uses: actions-rs/cargo@v1
-        with:
-          command: clippy
-          args: --all-targets --all-features
-      - name: Formatting check
+
+      - name: Code Formatting
         uses: actions-rs/cargo@v1
         with:
           command: fmt
           args: --all -- --check -l
-      - name: Documentation build
+
+      - name: Lint
+        uses: actions-rs/cargo@v1
+        with:
+          command: clippy
+          args: --all-targets --all-features --profile production
+
+      - name: Documentation
         uses: actions-rs/cargo@v1
         env:
           RUSTDOCFLAGS: -Dwarnings
         with:
           command: doc
-          args: --all-features --no-deps --document-private-items
-      - name: Debug check
-        uses: actions-rs/cargo@v1
-        with:
-          command: check
-          args: --all-targets --all-features
-      - name: Debug build
-        uses: actions-rs/cargo@v1
-        with:
-          command: build
-          args: --all-features
-      - name: Tests with debug build
-        uses: actions-rs/cargo@v1
-        with:
-          command: test
-          args: --all-features
-      - name: Release check
-        uses: actions-rs/cargo@v1
-        with:
-          command: check
-          args: --all-targets --all-features --release
-      - name: Release build
+          args: >-
+            --all-features
+            --no-deps
+            --document-private-items
+            --profile production
+
+      - name: Build
         uses: actions-rs/cargo@v1
         with:
           command: build
-          args: --all-features --release
-      - name: Tests with release build
+          args: --all-features --profile production
+
+      - name: Tests
         uses: actions-rs/cargo@v1
         with:
           command: test
-          args: --all-features --release
+          args: --all-features --profile production
+
       # - name: Strip + UPX release binary
       #   uses: svenstaro/upx-action@v2
       #   with:
-      #     file: target/release/tvrank
+      #     file: target/production/tvrank
       #     strip: true
-      - name: Production build
-        uses: actions-rs/cargo@v1
-        with:
-          command: build
-          args: --all-features --profile production
-      - name: Tests with production build
-        uses: actions-rs/cargo@v1
-        with:
-          command: test
-          args: --all-features --profile production
-      - name: Build tarball
+
+      - name: Tarball
         shell: bash
         run: |
           export NAME=tvrank-${{steps.tag.outputs.tag}}-macos
@@ -191,91 +154,73 @@ jobs:
           cp LICENSE $NAME/LICENSE
           cp README.md $NAME/README.md
           hdiutil create -format UDZO -srcfolder $NAME $NAME.dmg
-      - name: Upload tarball artifact
+
+      - name: Upload Tarball
         uses: actions/upload-artifact@v2
         with:
           name: tvrank-${{steps.tag.outputs.tag}}-macos.dmg
           path: tvrank-${{steps.tag.outputs.tag}}-macos.dmg
 
   windows-build:
-    name: Release build on Windows 2019
+    name: Windows Build
     runs-on: windows-2019
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Get tag name
+      - name: Switch to Git Tag
         uses: dawidd6/action-get-tag@v1
         id: tag
-      - name: Install stable toolchain
+      - name: Install Stable Toolchain
         uses: actions-rs/toolchain@v1
         with:
           profile: minimal
           toolchain: stable
           override: true
           components: rustfmt, clippy
-      - name: Lint
-        uses: actions-rs/cargo@v1
-        with:
-          command: clippy
-          args: --all-targets --all-features
-      - name: Formatting check
+
+      - name: Code Formatting
         uses: actions-rs/cargo@v1
         with:
           command: fmt
           args: --all -- --check -l
-      - name: Documentation build
+
+      - name: Lint
+        uses: actions-rs/cargo@v1
+        with:
+          command: clippy
+          args: --all-targets --all-features --profile production
+
+      - name: Documentation
         uses: actions-rs/cargo@v1
         env:
           RUSTDOCFLAGS: -Dwarnings
         with:
           command: doc
-          args: --all-features --no-deps --document-private-items
-      - name: Debug check
-        uses: actions-rs/cargo@v1
-        with:
-          command: check
-          args: --all-targets --all-features
-      - name: Debug build
-        uses: actions-rs/cargo@v1
-        with:
-          command: build
-          args: --all-features
-      - name: Tests with debug build
-        uses: actions-rs/cargo@v1
-        with:
-          command: test
-          args: --all-features
-      - name: Release check
-        uses: actions-rs/cargo@v1
-        with:
-          command: check
-          args: --all-targets --all-features --release
-      - name: Release build
+          args: >-
+            --all-features
+            --no-deps
+            --document-private-items
+            --profile production
+
+      - name: Build
         uses: actions-rs/cargo@v1
         with:
           command: build
-          args: --all-features --release
-      - name: Tests with release build
+          args: --all-features --profile production
+
+      - name: Tests
         uses: actions-rs/cargo@v1
         with:
           command: test
-          args: --all-features --release
+          args: --all-features --profile production
+
       # - name: Strip + UPX release binary
       #   uses: svenstaro/upx-action@v2
       #   with:
-      #     file: target/release/tvrank.exe
-      #     strip: false
-      - name: Production build
-        uses: actions-rs/cargo@v1
-        with:
-          command: build
-          args: --all-features --profile production
-      - name: Tests with production build
-        uses: actions-rs/cargo@v1
-        with:
-          command: test
-          args: --all-features --profile production
-      - name: Build tarball
+      #     file: target/production/tvrank
+      #     strip: true
+
+      - name: Tarball
         shell: bash
         run: |
           export NAME=tvrank-${{steps.tag.outputs.tag}}-windows
@@ -286,35 +231,38 @@ jobs:
           cp LICENSE $NAME/LICENSE
           cp README.md $NAME/README.md
           7z a $NAME.zip $NAME
-      - name: Upload tarball artifact
+
+      - name: Upload Tarball
         uses: actions/upload-artifact@v2
         with:
           name: tvrank-${{steps.tag.outputs.tag}}-windows.zip
           path: tvrank-${{steps.tag.outputs.tag}}-windows.zip
 
-  create-release:
+  publish-github:
+    name: Publish Releases to Github
     needs: [linux-build, macos-build, windows-build]
-    name: Create release
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Get tag name
+      - name: Switch to Git Tag
         uses: dawidd6/action-get-tag@v1
         id: tag
-      - name: Download Linux tarball
+
+      - name: Download Linux Tarball
         uses: actions/download-artifact@v2
         with:
           name: tvrank-${{steps.tag.outputs.tag}}-linux.tar.bz2
-      - name: Download MacOS tarball
+      - name: Download MacOS Tarball
         uses: actions/download-artifact@v2
         with:
           name: tvrank-${{steps.tag.outputs.tag}}-macos.dmg
-      - name: Download Windows tarball
+      - name: Download Windows Tarball
         uses: actions/download-artifact@v2
         with:
           name: tvrank-${{steps.tag.outputs.tag}}-windows.zip
-      - name: Create release
+
+      - name: Create Release on Github
         id: create_release
         uses: actions/create-release@v1
         env:
@@ -323,7 +271,8 @@ jobs:
           tag_name: ${{steps.tag.outputs.tag}}
           release_name: tvrank-${{steps.tag.outputs.tag}}
           body_path: changelogs/${{steps.tag.outputs.tag}}.md
-      - name: Upload Linux tarball
+
+      - name: Upload Linux Tarball
         # id: upload-release-asset-linux
         uses: actions/upload-release-asset@v1
         env:
@@ -333,7 +282,8 @@ jobs:
           asset_path: tvrank-${{steps.tag.outputs.tag}}-linux.tar.bz2
           asset_name: tvrank-${{steps.tag.outputs.tag}}-linux.tar.bz2
           asset_content_type: application/x-bzip2
-      - name: Upload MacOS tarball
+
+      - name: Upload MacOS Tarball
         # id: upload-release-asset-macos
         uses: actions/upload-release-asset@v1
         env:
@@ -343,7 +293,8 @@ jobs:
           asset_path: tvrank-${{steps.tag.outputs.tag}}-macos.dmg
           asset_name: tvrank-${{steps.tag.outputs.tag}}-macos.dmg
           asset_content_type: application/x-bzip2
-      - name: Upload Windows tarball
+
+      - name: Upload Windows Tarball
         # id: upload-release-asset-macos
         uses: actions/upload-release-asset@v1
         env:
@@ -353,4 +304,21 @@ jobs:
           asset_path: tvrank-${{steps.tag.outputs.tag}}-windows.zip
           asset_name: tvrank-${{steps.tag.outputs.tag}}-windows.zip
           asset_content_type: application/zip
+
+  publish-crates-io:
+    name: Publish to Crates.io
+    # Don't publish to crates.io unless all builds have succeeded.
+    needs: [linux-build, macos-build, windows-build]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Switch to Git Tag
+        uses: dawidd6/action-get-tag@v1
+        id: tag
+
+      - name: Publish to Crates.io
+        env:
+          CRATES_IO_TOKEN: ${{ secrets.CRATES_IO_TOKEN }}
+        run: cargo publish --token ${CRATES_IO_TOKEN}
 ...
