--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ enum-utils = "0.1"
 serde = { version = "1.0", features = ["derive"] }
 # serde_with = "1.9"
 serde_json = "1.0"
+serde_yaml = "0.8"
 csv = "1.1"
 regex = "1.5"
 directories = "3.0"
