Have gitpod additionally do a clippy run and release build

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -18,6 +18,8 @@ tasks:
   - init: |
       # Build workspace.
       cargo build
+      cargo clippy
+      cargo build --release
 
 vscode:
   extensions:
